force-app/main/default/objects/SBQQ__ProductAction__c/fields/SBQQ__FilterField__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__FilterField__c</fullName>
    <description>The field that is updated when the rule is triggered.</description>
    <inlineHelpText>Choose the field to update when the rule is triggered.</inlineHelpText>
    <label>Filter Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Product Code</fullName><default>false</default><label>Product Code</label></value>
            <value><fullName>Product Family</fullName><default>false</default><label>Product Family</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>