force-app/main/default/objects/SBQQ__ProductAction__c/fields/SBQQ__Type__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__Type__c</fullName>
    <description>Type of action.</description>
    <inlineHelpText>Specify the type of action.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Add</fullName><default>false</default><label>Add</label></value>
            <value><fullName>Remove</fullName><default>false</default><label>Remove</label></value>
            <value><fullName>Enable</fullName><default>false</default><label>Enable</label></value>
            <value><fullName>Disable</fullName><default>false</default><label>Disable</label></value>
            <value><fullName>Enable &amp; Add</fullName><default>false</default><label>Enable &amp; Add</label></value>
            <value><fullName>Disable &amp; Remove</fullName><default>false</default><label>Disable &amp; Remove</label></value>
            <value><fullName>Show</fullName><default>false</default><label>Show</label></value>
            <value><fullName>Hide</fullName><default>false</default><label>Hide</label></value>
            <value><fullName>Show &amp; Add</fullName><default>false</default><label>Show &amp; Add</label></value>
            <value><fullName>Hide &amp; Remove</fullName><default>false</default><label>Hide &amp; Remove</label></value>
            <value><fullName>Default Filter</fullName><default>false</default><label>Default Filter</label></value>
            <value><fullName>Optional Filter</fullName><default>false</default><label>Optional Filter</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>