force-app/main/default/objects/SBQQ__ProductAction__c/fields/SBQQ__ValueObject__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ValueObject__c</fullName>
    <description>The Salesforce Object that holds the Value Field,</description>
    <inlineHelpText>Select the Salesforce Object where the Value Field is defined.</inlineHelpText>
    <label>Value Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Quote</fullName><default>false</default><label>Quote</label></value>
            <value><fullName>Product</fullName><default>false</default><label>Product</label></value>
            <value><fullName>Configuration Attributes</fullName><default>false</default><label>Configuration Attributes</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>